client/src/components/Sidebar.css
/* sidebar.css */
.sidebar {
  position: relative;
  z-index: 200;
  width: 70px;
  height: 100vh;
  background-color: #00489F;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 30px 0;
  box-sizing: border-box;
  border-top-right-radius: 20px;
  border-bottom-right-radius: 20px;
  box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
}

/* 상단그룹 */
.sidebar-menu-group {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  gap: 20px; /* 아이콘 사이의 간격 */
  margin-top: 20px;
}

/* svg 아이콘 영역 */
.menu-item {
  width: 48px;
  height: 48px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 12px; /* 둥근 사각형 */
  cursor: pointer;
  transition: all 0.2s ease;
  color: rgba(255, 255, 255, 0.7);
  text-decoration: none;
}

/* 커서 올릴때 네모 */
.menu-item:hover {
  background-color: rgba(255, 255, 255, 0.2);
  color: #ffffff;
}

/* 네모고정 */
.menu-item.active {
  background-color: rgba(255, 255, 255, 0.2);
  color: #ffffff;
}

/* 홈전용 네모 */
.menu-item.home-btn:active {
  background-color: transparent;
}
/* SVG 아이콘 크기 제어 (내부에 들어갈 아이콘) */
.menu-item img {
  width: 25px;
  height: 25px;
  fill: currentColor;
}

.menu-item.keyword-btn img {
  width: 20px;
  height: 20px;
}

.sidebar-bottom-group {
  margin-top: auto;
  padding-bottom: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}

